hphp/hack/test/typecheck/expression_trees/invalid_call2.php.like_types.exp
File "invalid_call2.php", line 15, characters 5-15:
Only classnames and variables are allowed before `::`. (Parsing[1002])
File "invalid_call2.php", line 15, characters 5-22:
Expression trees only support function calls and static method calls on named classes. (Parsing[1002])
File "invalid_call2.php", line 14, characters 20-79:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 42, characters 41-79:
  But got `dynamic` because it is an unenforceable type
File "invalid_call2.php", line 15, characters 5-22:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 50, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "invalid_call2.php", line 15, characters 17-21:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 35, characters 5-45:
  But got `dynamic` because it is an unenforceable type
